# AgentSnap

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  conftest.py  main.py  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  live-validation.yml  release.yml  sdk-drift.yml
__agent_snapshots__/: demo_anthropic.json  demo_cohere.json  demo_gemini.json  demo_groq.json  demo_mistral.json  demo_openai.json  real_openrouter.json
__agent_snapshots__/.last_run/: demo_anthropic.json  demo_cohere.json  demo_gemini.json  demo_groq.json  demo_mistral.json  demo_openai.json
agentsnap/: __init__.py  cli.py  config.py  exceptions.py  patches.py  pytest_plugin.py  setup_wizard.py  wrap.py
agentsnap/adapters/: _raw_response.py  anthropic.py  cohere.py  google.py  groq.py  langgraph.py  mistral.py  openai.py  openrouter.py  tool.py
agentsnap/core/: asserter.py  diff.py  normalize.py  recorder.py  replay.py  snapshot.py
agenttest/: __init__.py  cli.py  exceptions.py  pytest_plugin.py
agenttest/adapters/: anthropic.py  langgraph.py  openai.py  tool.py
agenttest/core/: asserter.py  diff.py  recorder.py  snapshot.py
examples/: README.md  _common.py  async_agents.py  cli_workflow.py  demo_async.py  demo_mock.py  demo_new_features.py  demo_real.py  demo_replay.py  demo_streaming.py  demo_tool_use.py  model_tools.py  providers.py  pytest_fixture.py  quickstart.py  replay.py  run_all.py  scenarios.py  streaming.py  tuning.py
site-docs/: index.md  reference.md
site-docs/guides/: ci.md  cli.md  configuration.md  frameworks.md  model-tools.md  recording.md  replay.md  streaming.md
tests/fixtures/: mock_agents.py
tests/frameworks/: test_langchain.py  test_langchain_anthropic.py  test_openai_agents.py  test_pydantic_ai.py
tests/integration/: conftest.py  test_cli_init.py  test_cli_update.py  test_examples.py  test_langgraph_callback.py  test_model_tools.py  test_pytest_plugin.py  test_record_assert.py  test_replay_mode.py  test_zero_instrument.py
tests/unit/: test_async_interception.py  test_cli.py  test_diff.py  test_exceptions.py  test_normalize.py  test_patches.py  test_raw_response_shim.py  test_record_assert_tolerance.py  test_record_raw.py  test_replay.py  test_replay_adapters.py  test_responses_api.py  test_serialization.py  test_setup_wizard.py  test_streaming.py  test_tool_requests.py
