[project]
name = "agentsnap"
version = "0.1.0"
description = "Deterministic snapshot testing harness for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25",
    "openai>=1.0",
    "sentence-transformers>=2.0",
    "click>=8.0",
    "pytest>=7.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
langgraph = ["langgraph"]
google = ["google-genai>=1.0"]
cohere = ["cohere>=5.0"]
mistral = ["mistralai>=1.0"]
groq = ["groq>=0.9"]
all-providers = [
    "google-genai>=1.0",
    "cohere>=5.0",
    "mistralai>=1.0",
    "groq>=0.9",
    "langgraph",
]
dev = [
    "pytest-cov",
    "ruff",
]

[project.scripts]
agentsnap = "agentsnap.cli:main"

[project.entry-points."pytest11"]
agentsnap = "agentsnap.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
