[project]
name = "agentsnap"
version = "0.5.0"
description = "Deterministic snapshot testing harness for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Syed Mohammad Faham", email = "iamfaham5@gmail.com" },
]
dependencies = [
    "openai>=1.0",
    "click>=8.0",
    "pytest>=7.0",
    "python-dotenv>=1.0",
    "tomlkit>=0.12",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
offline = [
    "sentence-transformers>=2.0",
    "numpy>=1.24",
]
anthropic = ["anthropic>=0.25"]
langgraph = ["langgraph"]
google = ["google-genai>=1.0"]
cohere = ["cohere>=5.0"]
mistral = ["mistralai>=1.0"]
groq = ["groq>=0.9"]
all-providers = [
    "anthropic>=0.25",
    "google-genai>=1.0",
    "cohere>=5.0",
    "mistralai>=1.0",
    "groq>=0.9",
    "langgraph",
    "sentence-transformers>=2.0",
    "numpy>=1.24",
]
dev = [
    "pytest-cov",
    "ruff>=0.16,<0.17",
    "anthropic>=0.25",
    "langgraph",
    "deepdiff>=6.0",
    "numpy>=1.24",
]
frameworks = [
    "pydantic-ai-slim[openai]",
    "openai-agents",
    "langchain-openai",
    "langchain-anthropic",
    "httpx",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
agentsnap = "agentsnap.cli:main"

[project.entry-points."pytest11"]
agentsnap = "agentsnap.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "frameworks: real-framework verification tests (needs .[frameworks])",
]

[tool.agentsnap]
# Semantic backend: "offline" (all-MiniLM-L6-v2) or "judge" (LLM via API)
# Run `agentsnap init` to reconfigure. API key goes in AGENTSNAP_JUDGE_API_KEY env var.
backend          = "judge"
# LLM judge settings (used when backend = "judge")
judge_model      = "openai/gpt-4o-mini"
judge_base_url   = "https://openrouter.ai/api/v1"
# Thresholds
semantic_threshold = 0.92   # final agent output
llm_threshold      = 0.75   # intermediate LLM call responses

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# These three rules conflict with deliberate design choices in this library:
ignore = [
    "BLE001",  # blind `except Exception` is intentional — adapters and stream
               # finalizers must degrade gracefully and never crash a user's agent
    "S110",    # try/except/pass in TraceAccumulator.finalize_streams is a
               # deliberate best-effort cleanup of already-abandoned streams
    "PYI034",  # __enter__/__aenter__ return the concrete class rather than `Self`
               # to avoid a typing_extensions dependency on Python 3.10
]
